z-index for correct pane juxtaposition

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -9,6 +9,7 @@ body {}
 
 .film {
   position: relative;
+  z-index: 1;
 }
 
 .row {
@@ -66,6 +67,12 @@ body {}
   font-size: 4rem;
 }
 
+
+.textContainer {
+  position: relative;
+  background-color: #fff;
+  z-index: 1;
+}
 
 .text {
   /*padding: 128px 0 60vh 0;*/
